Organização de telas e controllers sem funcionalidade, menus e estilo base

--- a/src/main/resources/templates/gerar-cartao.html
+++ b/src/main/resources/templates/gerar-cartao.html
@@ -3,15 +3,17 @@
 	layout:decorate="~{layout}">
 <head>
 	<meta charset="utf-8">
-	<title>Cateno - Cliente PF</title>
+	<title>Cateno - Gerar Cartão</title>
 </head>
 <body>
 
 	<section layout:fragment="content">
 		<div class="panel panel-default">
-			<div class="panel-heading">Cadastrar Pessoa Física</div>
+			<div class="panel-heading">Gerar Cartão</div>
 				<div class="col-sm-8 text-left">
 					<div class="panel-body">
+					
+					<!-- Content here -->
 					
 					</div>
 				</div>
