--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,16 +2,17 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout}">
 <head>
-	<meta charset="utf-8">
-	<title>Cateno - Cliente PF</title>
+	<title>Cateno</title>
 </head>
 <body>
 
 	<section layout:fragment="content">
 		<div class="panel panel-default">
-			<div class="panel-heading">Cadastrar Pessoa Física</div>
+			<div class="panel-heading"><!-- Panel Header Text --></div>
 				<div class="col-sm-8 text-left">
 					<div class="panel-body">
+					
+					<!-- Content here -->
 					
 					</div>
 				</div>
