--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -1,126 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layout}">
 <head>
-<title>Cateno - Cliente PF</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style>
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-	margin-bottom: 0;
-	border-radius: 0;
-}
-
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {
-	height: 450px
-}
-
-/* Set gray background color and 100% height */
-.sidenav {
-	padding-top: 20px;
-	background-color: #f1f1f1;
-	height: 100%;
-}
-
-/* Set black background color, white text and some padding */
-footer {
-	background-color: #555;
-	color: white;
-	padding: 15px;
-}
-
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-	.sidenav {
-		height: auto;
-		padding: 15px;
-	}
-	.row.content {
-		height: auto;
-	}
-}
-</style>
+	<title>Cateno - Produtos</title>
 </head>
 <body>
-	<nav class="navbar navbar-inverse">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse"
-					data-target="#myNavbar">
-					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">Cateno</a>
-			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Projects</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>
-							Login</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<div class="container-fluid text-center">
-		<div class="row content">
-			<div class="col-sm-2 sidenav">
-				<p>
-					<a href="#">Link</a>
-				</p>
-				<p>
-					<a href="#">Link</a>
-				</p>
-				<p>
-					<a href="#">Link</a>
-				</p>
-			</div>
 
-			<div class="col-sm-8 text-left">
-			
-			
-				<!-- Content here-->
+	<section layout:fragment="content">
+	<div class="panel panel-default">
+			<div class="panel-heading">Produtos</div>
+				<div class="col-sm-8 text-left">
+					<div class="panel-body">
 				
-				<h1>Produtos</h1>
-				
-				<p>Number:<span th:text="${products.number}"></span></p>
-				<p>Size:<span th:text="${products.size}"></span></p>
-				<p>Total Pages:<span th:text="${products.totalPages}"></span></p>
-				<p>Total Elements:<span th:text="${products.totalElements}"></span></p>
-				
-				<div class="container">
-				    <table class="table">
-				      <tr>
-				      	<th>Id</th>
-				      	<th>Nome</th>
-				        <th>Status</th>
-				        <th>Id Fantasia BÃ¡sica</th>
-				      </tr>
-				      <tr th:each="prod,iterationStatus  : ${products.content}">
-				        <td th:text="${prod.id}"></td>
-				        <td th:text="${prod.nome}"></td>
-				        <td th:text="${prod.status}"></td>
-				        <td th:text="${prod.idFantasiaBasica}"></td>
-				      </tr>
-				    </table>
-			    </div>
-				
-				<!-- /Content here-->
-				
+						<p>Number:<span th:text="${products.number}"></span></p>
+						<p>Size:<span th:text="${products.size}"></span></p>
+						<p>Total Pages:<span th:text="${products.totalPages}"></span></p>
+						<p>Total Elements:<span th:text="${products.totalElements}"></span></p>
+						
+						<div class="container">
+						    <table class="table">
+						      <tr>
+						      	<th>Id</th>
+						      	<th>Nome</th>
+						        <th>Status</th>
+						        <th>Id Fantasia Básica</th>
+						      </tr>
+						      <tr th:each="prod,iterationStatus  : ${products.content}">
+						        <td th:text="${prod.id}"></td>
+						        <td th:text="${prod.nome}"></td>
+						        <td th:text="${prod.status}"></td>
+						        <td th:text="${prod.idFantasiaBasica}"></td>
+						      </tr>
+						    </table>
+					    </div>
+		
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-	<footer class="container-fluid text-center">
-		<p>Footer</p>
-	</footer>
+	</section>
 
 </body>
 </html>
+
+
+
+
+
+
