--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -2,6 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout}">
 <head>
+	<meta charset="utf-8">
 	<title>Busca Cep</title>
 </head>
 <body>
