tela de cadastro de pessoa fisica concluida

--- a/src/main/resources/css/cateno.css
+++ b/src/main/resources/css/cateno.css
@@ -1,3 +1,8 @@
+/* Gap between rows */
+.top-buffer { 
+  margin-top:15px; 
+}
+
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
 	margin-bottom: 0;
