--- a/src/main/resources/templates/gerar-cartao.html
+++ b/src/main/resources/templates/gerar-cartao.html
@@ -40,8 +40,8 @@
 							<hr>
 							<div class="panel-group">
 								<div class="panel panel-default">
-									<div class="panel-heading"><h3>Cartão Requisitado com sucesso!</h3></div>
-		  							<div class="row">
+									<div class="panel-heading"><h3>Cartão requisitado com sucesso!</h3></div>
+		  							<div class="row container">
 										<div class="panel-body col-sm-4">
 											<label for="flag-virtual-id">Cartão virtual:</label> 
 											<span id="flag-virtual-id" th:text="*{flagVirtual}">
