--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/cateno.css}"></link>
 </head>
@@ -19,7 +20,7 @@
 		      <li class="active"><a th:href="@{/home}">Home</a></li>
 		      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Cliente<span class="caret"></span></a>
 		        <ul class="dropdown-menu">
-		          <li><a th:href="@{/cliente/pf}">Pessoa Física</a></li>
+		          <li><a th:href="@{/cliente/pf/create}">Pessoa Física</a></li>
 		        </ul>
 		      </li>
 		      <li class="dropdown">
