--- a/src/main/resources/templates/clientes-pessoas-fisicas.html
+++ b/src/main/resources/templates/clientes-pessoas-fisicas.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="row top-buffer">
 							<div class="col-sm-4">
-								<label for="data-nascimento-id">Data de nascimeto:</label> 
+								<label for="data-nascimento-id">Data de nascimento:</label> 
 								<input type="date" class="form-control" id="data-nascimento-id" th:field="*{dataNascimento}" >
 							</div>
 							<div class="col-sm-4">
@@ -294,7 +294,7 @@
 						</div>
 						
 						<div class="row top-buffer">
-							<button type="submit" name="save" class="btn btn-primary">Submit</button>
+							<button type="submit" name="save" class="btn btn-primary">Submeter</button>
 						</div>
 					</form>
 				
