--- a/src/main/resources/templates/gerar-cartao.html
+++ b/src/main/resources/templates/gerar-cartao.html
@@ -12,6 +12,10 @@
 			<div class="panel-heading"><h2>Gerar Cartão</h2></div>
 				<div class="col-sm-8 text-left">
 					<div class="panel-body">
+						
+						<div th:if="${returnMessage != ''}" class="alert alert-danger">
+							<strong>Erro! </strong><span id="error-message-id" th:text="*{returnMessage}">
+						</div>
 
 						<form action="#" th:action="@{/card/create}" th:object="${cardRequest}" method="post">
 							<div class="form-group">
@@ -40,7 +44,7 @@
 							<hr>
 							<div class="panel-group">
 								<div class="panel panel-default">
-									<div class="panel-heading"><h3>Cartão requisitado com sucesso!</h3></div>
+									<div class="alert alert-success"><h3>Cartão requisitado com sucesso!</h3></div>
 		  							<div class="row container">
 										<div class="panel-body col-sm-4">
 											<label for="flag-virtual-id">Cartão virtual:</label> 
@@ -55,7 +59,7 @@
 											<span id="pessoa-id" th:text="*{idPessoa}">
 										</div>
 									</div>
-									<div class="row">
+									<div class="row container">
 										<div class="panel-body col-sm-4">
 											<label for="cartao-id">Código do cartão:</label> 
 											<span id="cartao-id" th:text="*{idCartao}">
@@ -69,7 +73,7 @@
 											<span id="tipo-cartao-id" th:text="*{idTipoCartao}">
 										</div>
 									</div>
-									<div class="row">
+									<div class="row container">
 										<div class="panel-body col-sm-4">
 											<label for="data-geracao-id">Data de emissão:</label> 
 											<span id="data-geracao-id" th:text="*{#dates.format(dataGeracao, 'dd-MM-yyyy HH:mm')}">
@@ -83,7 +87,7 @@
 											<span id="nome-origem-comercial-id" th:text="*{nomeOrigemComercial}">
 										</div>
 									</div>
-									<div class="row">
+									<div class="row container">
 										<div class="panel-body col-sm-4">
 											<label for="cpf-id">CPF:</label> 
 											<span id="cpf-id" th:text="*{cpf}">
